# germ

./: .gitignore  .license_template  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: check.yaml
crates/germ/: Cargo.toml
crates/germ-macros-impl/: Cargo.toml
crates/germ-macros-impl/src/: lib.rs
crates/germ/examples/: ast_to_gemtext.rs  async_request.rs  convert.html  convert.md  html.rs  markdown.rs  meta.rs  request.rs
crates/germ/src/: ast.rs  convert.rs  lib.rs  meta.rs  quick.rs  request.rs
crates/germ/src/ast/: container.rs  macros.rs  node.rs
crates/germ/src/request/: response.rs  status.rs  sync.rs  verifier.rs
crates/germ/tests/: ast.rs  convert.rs  quick.rs
examples/: ast.rs  ast_to_gemtext.rs  html.rs  markdown.rs  meta.rs  request.rs  request_blocking.rs  request_blocking_to_gemtext_from_ast.rs  request_to_gemtext_from_ast.rs
germ/: Cargo.toml
germ-macros-impl/: Cargo.toml
germ/src/: lib.rs  quick.rs
germ/src/convert/: macros.rs  markdown.rs
germ/tests/: meta.rs
src/: ast.rs  convert.rs  lib.rs  meta.rs  quick.rs  request.rs
src/ast/: container.rs  macros.rs  node.rs
src/convert/: html.rs  macros.rs  markdown.rs
src/request/: blocking.rs  non_blocking.rs  response.rs  status.rs  sync.rs  verifier.rs
tests/: ast.rs  convert.rs  meta.rs  node.rs  status.rs
