# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "germ"
version = "0.2.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "The Ultimate Gemini Toolkit."
documentation = "https://docs.rs/germ"
readme = "README.md"
homepage = "https://github.com/gemrest/germ"
repository = "https://github.com/gemrest/germ"
license = "GPL-3.0-only"
keywords = ["gemini", "parser", "lexer", "markdown", "converter"]
categories = ["encoding"]

[features]
ast = []
convert = ["ast"]
request = ["rustls", "url", "anyhow"]
meta = []

[dependencies]
rustls = { version = "0.20.5", features = ["dangerous_configuration"], optional = true } # TLS
url = { version = "2.2.2", optional = true } # URL Validation
anyhow = { version = "1.0.57", optional = true } # `Result`
