# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "germ-macros-impl"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Germ Macro Implementations"
documentation = "https://docs.rs/germ"
readme = "../../../README.md"
homepage = "https://github.com/gemrest/germ"
repository = "https://github.com/gemrest/germ"
license = "GPL-3.0-only"
keywords = ["gemini", "parser", "lexer", "markdown", "converter"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18" # Quasi-quoting
