# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "germ"
version = "0.3.7"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "The Ultimate Gemini Toolkit."
documentation = "https://docs.rs/germ"
readme = "../../README.md"
homepage = "https://github.com/gemrest/germ"
repository = "https://github.com/gemrest/germ"
license = "GPL-3.0-only"
keywords = ["gemini", "parser", "lexer", "markdown", "converter"]
categories = ["encoding"]

[features]
ast = []
convert = ["ast"]
default = ["ast", "convert", "meta", "request"]
macros = ["ast", "convert", "germ-macros-impl"]
meta = []
request = ["rustls", "url", "anyhow"]
quick = []

[dependencies]
anyhow = { version = "1.0.57", optional = true } # `Result`
germ-macros-impl = { path = "../germ-macros-impl", version = "0.1.0", optional = true } # Germ's Macro Implementations
rustls = { version = "0.21.0", features = [
  "dangerous_configuration"
], optional = true } # TLS
url = { version = "2.3.1", optional = true } # URL Validation
